# nook-weather

nook/: ElectricSign_v1.0.3.apk  nook_1_2_update.md  readme-nook.md
raspi/: CMakeLists.txt  alert.cpp  alert.h  api-base.h  api-openweathermap.cpp  api-openweathermap.h  aqi.cpp  aqi.h  beaufort.cpp  beaufort.h  main.cpp  main.h  modifysvg.cpp  modifysvg.h  readme-raspi.md  uvindex.cpp  uvindex.h  weathertypes.h
raspi/img/: readme-img.md
